2008-09-18  Martin Kutschker  <masi@typo3.org>

	* Fixed bug #8950: page id not availabe in TCEmain hook clearCachePostProc
	* Fixed bug #8588: Admin tools -> User Admin -> List users online broken when [BE][lockIP] is set to < 4

2008-09-18  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9331: htmlArea RTE Acronym feature: List of unabridged terms shows wrong values

2008-09-16  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow up to #9354: htmlArea RTE: no default css rule is provided for indentation: px to em

2008-09-16  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #9360: TypoScript Object Browser interprets HTML Tags in comments (Thanks to Stefano Kowalke)

2008-09-15  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9310: table border colour popups appear only when textcolour button is shown
	* Fixed bug #9354: htmlArea RTE: no default css rule is provided for indentation

2008-09-14  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #9172: Wrong display of deleted owners and groups in Web->Access->Permissions (thanks to Johannes Pieper)

2008-09-14  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9308: htmlArea RTE: link on colour name doesn't set colour

2008-09-13  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9277: Incorrect size of htmlArea RTE dialogue windows in Google Chrome browser
	* Fixed bug #9338: htmlArea RTE: incorrect opening size of some dialogue windows
	* Fixed bug #9339: htmlArea RTE: Enable resizing of acronym dialogue window in IE
	* Fixed bug #9341: htmlArea RTE: unable to disable the acronym element from the acronym feature

2008-09-11  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #8644: Usersettings with fullHelptextMode looks weird (thanks to Steffen Kamper)

2008-09-10  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9315: Description of tslib_fe::includeTCA is incorrect

2008-09-09  Dmitry Dulepov  <dmitry@typo3.org>

    * Fixed bug #9268: TCA is not loaded in FE when config cache is disabled
