@@ -314,6 +314,7 @@ class filelistFolderTree extends t3lib_folderTree {
 			switch($val['type'])	{
 				case 'user':	$icon = 'gfx/i/_icon_ftp_user.gif';	break;
 				case 'group':	$icon = 'gfx/i/_icon_ftp_group.gif'; break;
+				case 'readonly':	$icon = 'gfx/i/_icon_ftp_readonly.gif'; break;
 				default:		$icon = 'gfx/i/_icon_ftp.gif'; break;
 			}
 
@@ -329,7 +330,7 @@ class filelistFolderTree extends t3lib_folderTree {
 
 				// If the mount is expanded, go down:
 			if ($isOpen)
-				$this->getFolderTree($val['path'], 999);
+				$this->getFolderTree($val['path'], 999, $val['type']);
 
 				// Add tree:
 			$treeArr = array_merge($treeArr, $this->tree);
@@ -347,7 +348,7 @@ class filelistFolderTree extends t3lib_folderTree {
 	 * @return	integer		The count of items on the level
 	 * @see getBrowsableTree()
 	 */
-	function getFolderTree($files_path, $depth=999)	{
+	function getFolderTree($files_path, $depth=999, $type='')	{
 
 			// This generates the directory tree
 		$dirs = t3lib_div::get_dirs($files_path);
@@ -383,7 +384,8 @@ class filelistFolderTree extends t3lib_folderTree {
 				$nextCount = $this->getFolderTree(
 					$path,
 					$depth-1,
-					$this->makeHTML ? '<img'.t3lib_iconWorks::skinImg($this->backPath,'gfx/ol/'.($a == $c ? 'blank' : 'line').'.gif','width="18" height="16"').' alt="" />' : ''
+					$this->makeHTML ? '<img'.t3lib_iconWorks::skinImg($this->backPath,'gfx/ol/'.($a == $c ? 'blank' : 'line').'.gif','width="18" height="16"').' alt="" />' : '',
+					$type
 				);
 				$exp = 1;	// Set "did expand" flag
 			} else {
@@ -395,7 +397,7 @@ class filelistFolderTree extends t3lib_folderTree {
 			if ($this->makeHTML)	{
 				$HTML = $this->PMicon($row,$a,$c,$nextCount,$exp);
 
-				$icon = 'gfx/i/_icon_'.t3lib_BEfunc::getPathType_web_nonweb($path).'folders.gif';
+				$icon = 'gfx/i/_icon_' .$webpath . 'folders' . ($type == 'readonly' ? '_ro' : '') . '.gif';
 				if ($val == '_temp_')	{
 					$icon = 'gfx/i/sysf.gif';
 					$row['title']='TEMP';
