@@ -6,6 +6,7 @@
 2008-09-18  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #9331: htmlArea RTE Acronym feature: List of unabridged terms shows wrong values
+	* Fixed bug #9320: Adding a new mount-type "readonly" for temporary filemounts (thanks to Steffen kamper)
 
 2008-09-16  Stanislas Rolland  <typo3@sjbr.ca>
 
